--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
 		"mongoose": "^8.15.1",
 		"multer": "^1.4.5-lts.1",
 		"mysql2": "^3.14.3",
+		"nodemailer": "^6.10.1",
 		"pg": "^8.16.3",
 		"pg-hstore": "^2.3.4",
 		"sequelize": "^6.37.7",
