--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
 		"express": "^4.18.2",
 		"express-rate-limit": "^8.2.1",
 		"funciones-basicas": "^2.1.14",
+		"helmet": "^8.1.0",
 		"jsonwebtoken": "^9.0.0",
 		"mongoose": "^8.15.1",
 		"multer": "^1.4.5-lts.1",
