feat: implementar sistema de logging profesional con Winston
1. Desactivar logging de Sequelize:
   - Agregado logging: false en todos los entornos (dev/test/prod)

2. Logger Winston global:
   - Creado backend/src/utils/logger.js
   - Niveles: info, warn, error, debug
   - Dev: logs colorizados en consola
   - Prod: logs en archivos rotativos (app.log, error.log)
   - Rotación diaria, compresión, retención 14d (app) / 30d (error)

3. Middleware de request logging:
   - Creado backend/src/middleware/requestLogger.js
   - Registra: método, ruta, código, IP, tiempo de respuesta
   - Formato: HTTP METHOD /route - STATUS - DURATIONms

4. Middleware de error logging:
   - Creado backend/src/middleware/errorLogger.js
   - Captura errores, loguea con contexto completo
   - Stack limpio (primeras 5 líneas)

5. Reemplazar todos los console.log/error:
   - console.log → logger.info/debug
   - console.error → logger.error
   - console.warn → logger.warn (excepto jwt.js por inicialización)

6. Actualizar .gitignore:
   - Agregado backend/logs/

Fixes: CRÍTICO #13 - Logs de consola en producción

--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,9 @@
 		"mysql2": "^3.14.3",
 		"nodemailer": "^6.10.1",
 		"sequelize": "^6.37.7",
-		"uuid": "^11.1.0"
+		"uuid": "^11.1.0",
+		"winston": "^3.18.3",
+		"winston-daily-rotate-file": "^5.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.34.0",
