--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
 		"express-rate-limit": "^8.2.1",
 		"funciones-basicas": "^2.1.14",
 		"helmet": "^8.1.0",
+		"joi": "^18.0.1",
 		"jsonwebtoken": "^9.0.0",
 		"multer": "^1.4.5-lts.1",
 		"mysql2": "^3.14.3",
