--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ippl-backend",
-	"version": "1.3.0",
+	"version": "2.0.0",
 	"description": "Backend para el sistema administrativo del IPPL",
 	"main": "src/index.js",
 	"scripts": {
@@ -12,8 +12,7 @@
 		"db:seed:all": "sequelize-cli --config config/config.js db:seed:all",
 		"dev": "nodemon src/index.js",
 		"setup": "node src/setup.js",
-		"db:reset": "sequelize-cli --config config/config.js db:drop && npm run db:create && npm run db:migrate && npm run db:seed:all",
-		"cleanup:prod": "node scripts/cleanupProdData.js"
+		"db:reset": "sequelize-cli --config config/config.js db:drop && npm run db:create && npm run db:migrate && npm run db:seed:all"
 	},
 	"keywords": [],
 	"author": "",
